# HIPPO

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yaml  lint.yml  release.yaml  release.yml  test.yaml  test.yml
docs/: requirements.txt
docs/source/: add_data.rst  animal.rst  api_reference.rst  compounds.rst  conf.py  db.rst  definitions.rst  getting_started.rst  index.rst  poses.rst  quoting.rst  recipes.rst  sampling.rst  syndirella.rst  windows.rst
hippo/: __init__.py  __main__.py  animal.py  apsw.py  bootstrap.py  chem.py  compound.py  cset.py  db.py  feature.py  fragalysis.py  interaction.py  iset.py  manage.py  metadata.py  migration.py  pca.py  plotting.py  pose.py  postgres.py  prolif.py  pset.py  pyvis.py  quote.py  reaction.py  recipe.py  rgen.py  rset.py  scoring.py  subsite.py  syndirella.py  ta_auth_connector.py  tags.py  target.py  tools.py  web.py
hippo/designdb/: animal.py  chem.py  ingredient.py  managers.py  models.py  price.py  recipe.py  route.py  utils.py  utils_frag.py  utils_xca.py
hippo/designdb/components/: compound.py  price.py  reaction.py  recipe.py
hippo/designdb/services/: compound.py  ingestion.py  ingredient.py  pose.py  reaction.py  recipe.py  route.py  score.py
hippo/designdb/sets/: compound.py  interaction.py  pose.py  reaction.py  route.py
hippo/xchem_hippo/: urls.py  wsgi.py
images/postgres/: Dockerfile  docker-entrypoint.sh
images/xchem-designdb/: .dockerignore  .gitignore  01_schema.sql  01_schema_OLD.sql  Dockerfile  docker-compose.yml  env.template
images/xchem-designdb/init-db/: 01_schema.sql
pg_setup/docker-entrypoint-initdb.d/: 01-extensions.sql
src/: bootstrap.py
src/designdb/: animal.py  apps.py  chem.py  django_setup.py  models.py  recipe.py  route.py
src/designdb/services/: ingestion.py  pose.py  route.py
src/designdb/sets/: compound.py  interaction.py  reaction.py
src/xchem_hippo/: asgi.py  settings.py
tests/: config.py  test_00_cleanup.py  test_01_fragalysis_download.py  test_02_setup_animal.py  test_03_add_hits.py  test_04_interactions.py  test_05_scaffolds.py  test_06_subsites.py  test_compound.py  test_feature.py  test_interaction.py  test_pose.py  test_subsite.py  test_tags.py  test_target.py
