[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "xchem-hippo"
version = "0.0.0"
authors = [
    { name = "Max Winokan", email = "max@winokan.com" },
]
description = "Hit Interaction Profiling and Procurement Optimisation"
readme = "README.md"
requires-python = ">=3.10"
requires = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Flexible
    "rdkit>=2024.9.6",
    "molparse>=0.0.41",
    "mpytools>=0.0.21",
    "jupyterlab>=4.4.5,<5",
    "chardet>=7.0.0,<8",
    "pandas>=2.3.3,<3",
    "scikit-learn>=1.7.2,<2",
    "yattag>=1.16.1,<2",
    "openpyxl>=3.1.5,<4",
    "ipywidgets>=8.1.8,<9",
    "networkx>=3.4.2,<4",
    "openmm>=8.4.0,<9",
    "apsw>=3.51.2.0,<4",
    # Fixed - generally for those that have not made major version 1.0
    "hirsch==0.1",
    "hippo_plot==0.0.7",
    "python-louvain==0.16",
]
[tool.hatch.build]
include = [
    "hippo/*.py",
]
